# abstract-vm

./: CMakeLists.txt  abstract-vm.cpp  abstract-vm.h  input.txt  main.cpp
CommentToken/: CommentToken.cpp  CommentToken.h
EvaluationStructure/: EvaluationStructure.cpp  EvaluationStructure.h
Evaluator/: Evaluator.cpp  Evaluator.h
Exceptions/DivisionByZeroException/: DivisionByZeroException.cpp  DivisionByZeroException.h
Exceptions/FalseAssertException/: FalseAssertException.cpp
Exceptions/InstructionOnEmptyStackException/: InstructionOnEmptyStackException.cpp  InstructionOnEmptyStackException.h
Exceptions/InvalidValueException/: InvalidValueException.cpp  InvalidValueException.h
Exceptions/LexicalErrorException/: LexicalErrorException.cpp  LexicalErrorException.h
Exceptions/ModuloByZeroException/: ModuloByZeroException.h
Exceptions/NoExitException/: NoExitException.cpp  NoExitException.h
Exceptions/NotEnoughOperandsException/: NotEnoughOperandsException.h
Exceptions/UnknownInstructionException/: UnknownInstructionException.cpp  UnknownInstructionException.h
Exceptions/ValueOverflowException/: ValueOverflowException.h
Exceptions/ValueUnderflowException/: ValueUnderflowException.cpp  ValueUnderflowException.h
IAST/: IAST.h
IOperand/: IOperand.h
IToken/: IToken.h
InstructionToken/: InstructionToken.cpp  InstructionToken.h
IterableStack/: IterableStack.h
Lexer/: Lexer.cpp  Lexer.h
Operand/: Operand.cpp  Operand.h
OperandFactory/: OperandFactory.cpp  OperandFactory.h
Parser/: Parser.cpp  Parser.h
Project1/scripts/: delete_module.sh  init_project.sh  make_module.sh
Reader/: Reader.cpp  Reader.h
TokenFactory/: TokenFactory.cpp  TokenFactory.h
TokenType/: TokenType.cpp  TokenType.h
Tokens/CommentToken/: CommentToken.h
Tokens/IToken/: IToken.h
Tokens/InstructionToken/: InstructionToken.cpp  InstructionToken.h
Tokens/ValueToken/: ValueToken.cpp
ValueToken/: ValueToken.cpp  ValueToken.h
eInputType/: eInputType.h
eTokenType/: eTokenType.h
src/: CMakeLists.txt  input.txt  input2.txt  main.cpp
src/EvaluationStructure/: EvaluationStructure.cpp  EvaluationStructure.h
src/Evaluator/: Evaluator.cpp  Evaluator.h
src/Exceptions/FalseAssertException/: FalseAssertException.h
src/Exceptions/InstructionsAfterExitException/: InstructionsAfterExitException.cpp  InstructionsAfterExitException.h
src/Exceptions/ModuloByZeroException/: ModuloByZeroException.cpp
src/Exceptions/NotEnoughOperandsException/: NotEnoughOperandsException.cpp
src/Exceptions/SyntaxErrorException/: SyntaxErrorException.cpp  SyntaxErrorException.h
src/Exceptions/ValueOverflowException/: ValueOverflowException.cpp  ValueOverflowException.h
src/IOperand/: IOperand.h
src/IterableStack/: IterableStack.hpp
src/Lexer/: Lexer.cpp  Lexer.h
src/Operand/: Operand.cpp  Operand.h
src/OperandFactory/: OperandFactory.cpp
src/Parser/: Parser.cpp
src/Project1/scripts/: freeze_project.sh  make_module.sh  test_script.sh
src/Reader/: Reader.cpp  Reader.h
src/Tokens/CommentToken/: CommentToken.cpp
src/Tokens/InstructionToken/: InstructionToken.cpp
src/Tokens/ValueToken/: ValueToken.cpp  ValueToken.h
src/Util/Conversion/: Conversion.cpp  Conversion.h
src/eInstruction/: eInstruction.h
src/eOperandType/: eOperandType.cpp  eOperandType.h
test/: CMakeLists.txt  LexerTests.cpp  ParserTests.cpp
uOperandTypeStorage/: uOperandTypeStorage.cpp  uOperandTypeStorage.h
